k8s_Openshift-Kubernetes/hw_1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework-1
  labels:
    project: homework-1-label
    environment: learning
